po: update po/de_DE/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/admin.po
+++ b/po/de_DE/admin.po
@@ -13,6 +13,7 @@
 # pantteri, 2013
 # Ettore Atalan <atalanttore@googlemail.com>, 2014-2015
 # Fabian <schuttenberg@systopia.de>, 2013-2016
+# Finn F <ffmoto95@gmail.com>, 2016
 # gnpma100 <gnpma100@gmail.com>, 2014
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
 # b2daniel <info@daniel-goetz.de>, 2016
@@ -35,8 +36,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-14 14:41+0000\n"
-"Last-Translator: b2daniel <info@daniel-goetz.de>\n"
+"PO-Revision-Date: 2016-07-01 18:56+0000\n"
+"Last-Translator: Finn F <ffmoto95@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -242,7 +243,7 @@ msgstr "Das ausgewählte Adressaufkleberformat wurde gelöscht."
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Copy %1 of %2"
-msgstr ""
+msgstr "Kopiere %1 von %2"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Your new Label Format titled <strong>%1</strong> has been saved."
@@ -1007,7 +1008,7 @@ msgstr "Die Beziehungsart wurde gespeichert."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send email"
-msgstr ""
+msgstr "E-Mail senden"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Record activity for automated email"
@@ -1027,11 +1028,11 @@ msgstr "Sende als"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "before"
-msgstr ""
+msgstr "davor"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "after"
-msgstr ""
+msgstr "danach"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Action Condition"
@@ -1047,7 +1048,7 @@ msgstr "Email Von"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Limit to"
-msgstr ""
+msgstr "Begrenzen auf"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Also include"
@@ -1059,7 +1060,7 @@ msgstr ""
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Limit Options"
-msgstr ""
+msgstr "Optionen zur Begrenzung"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Recipient Roles"
@@ -2289,7 +2290,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Docs"
-msgstr ""
+msgstr "Dokumente"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Support (External)"
@@ -2297,7 +2298,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Support"
-msgstr ""
+msgstr "Unterstützung"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Reconnect"
@@ -2309,7 +2310,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Disconnect"
-msgstr ""
+msgstr "%1: Trennen"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid ""
@@ -2347,11 +2348,11 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Connecting..."
-msgstr ""
+msgstr "Verbinden..."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Connected"
-msgstr ""
+msgstr "Verbunden"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Reconnecting..."
@@ -2363,11 +2364,11 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Disconnecting..."
-msgstr ""
+msgstr "Trennen..."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Disconnected"
-msgstr ""
+msgstr "Getrennt"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid ""
@@ -2381,7 +2382,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Opening..."
-msgstr ""
+msgstr "Öffnen..."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "External Link"
@@ -2389,7 +2390,7 @@ msgstr "Externer Link"
 
 #: ang/crmCxn/PermTable.html
 msgid "Action(s)"
-msgstr ""
+msgstr "Aktion(en)"
 
 #: ang/crmCxn/PermTable.html
 msgid "Filter(s)"
@@ -2397,7 +2398,7 @@ msgstr "Filter"
 
 #: ang/crmCxn/PermTable.html
 msgid "Field(s)"
-msgstr ""
+msgstr "Feld(er)"
 
 #: ang/crmCxn/PermTable.html
 msgid ""
@@ -5085,7 +5086,7 @@ msgstr "Aktualisiere..."
 
 #: templates/CRM/Admin/Page/Extensions.tpl
 msgid "Refresh Error"
-msgstr ""
+msgstr "Aktualisierungsfehler"
 
 #: templates/CRM/Admin/Page/Job.tpl
 msgid ""
@@ -5166,7 +5167,7 @@ msgstr "Sie können ein oder mehrere Adressaufkleberformate für Ihre CiviCRM-In
 
 #: templates/CRM/Admin/Page/LabelFormats.tpl
 msgid "Used for"
-msgstr ""
+msgstr "Benutzt für"
 
 #: templates/CRM/Admin/Page/LabelFormats.tpl
 msgid "Add Label Format"
@@ -5618,7 +5619,7 @@ msgstr "Verwalten Sie unten Ihre Teilnehmerstati. Aktivieren Sie die entsprechen
 
 #: templates/CRM/Admin/Page/ParticipantStatusType.tpl
 msgid "Name (Status ID)"
-msgstr ""
+msgstr "Name (Status ID)"
 
 #: templates/CRM/Admin/Page/ParticipantStatusType.tpl
 msgid "Add Participant Status"
@@ -6320,7 +6321,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/ScheduleReminders.tpl
 msgid "Add Reminder"
-msgstr ""
+msgstr "Erinnerung hinzufügen"
 
 #: templates/CRM/Admin/Page/Setting.tpl
 msgid ""
@@ -6450,7 +6451,7 @@ msgstr ""
 
 #: CRM/Admin/Form/CMSUser.php
 msgid "Synchronize Complete"
-msgstr ""
+msgstr "Synchronisation abgeschlossen"
 
 #: CRM/Admin/Form/Job.php
 msgid ""
@@ -6534,7 +6535,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting.php
 msgid "Save Failed"
-msgstr ""
+msgstr "Speichern fehlgeschlagen"
 
 #: CRM/Admin/Page/CKEditorConfig.php
 msgid ""
@@ -6547,11 +6548,11 @@ msgstr ""
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Unhide"
-msgstr ""
+msgstr "Anzeigen"
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Hide"
-msgstr ""
+msgstr "Verbergen"
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Remind me again in a week"
@@ -6571,7 +6572,7 @@ msgstr ""
 
 #: ang/crmStatusPage/StatusPage.html
 msgid "Hidden"
-msgstr ""
+msgstr "Verborgen"
 
 #: ang/crmStatusPage/StatusPage.html
 msgid "Hidden until %1"
@@ -6751,7 +6752,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid "URL Variables"
-msgstr ""
+msgstr "URL Variablen"
 
 #: templates/CRM/Admin/Form/Setting/Url.tpl
 msgid ""
