po: update po/ko_KR/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ko_KR/admin.po
+++ b/po/ko_KR/admin.po
@@ -4,12 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Josh Kim <joshkkim@gmail.com>, 2014
+# Young Jun Kim <young.j.kim0214@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-01 05:55+0000\n"
+"Last-Translator: Young Jun Kim <young.j.kim0214@gmail.com>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/civicrm/civicrm/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,11 +26,11 @@ msgstr "기본 연락처 유형"
 msgid ""
 "This contact type name already exists in database. Contact type names must "
 "be unique."
-msgstr ""
+msgstr "이 연락처 유형 명은 이미 데이터 베이스에 있습니다. 연락처 유형 이름은 반드시 유니크해야합니다."
 
 #: CRM/Admin/Form/ContactType.php
 msgid "Contact type names should not use reserved keywords."
-msgstr ""
+msgstr "연락처 유형 명에 예약 키워드는 사용할 수 없습니다."
 
 #: CRM/Admin/Form/ContactType.php
 msgid "Selected contact type has been deleted."
@@ -39,7 +40,7 @@ msgstr "선택한 연락처 유형이 삭제되었습니다."
 msgid ""
 "Selected contact type can not be deleted. Make sure contact type doesn't "
 "have any associated custom data or group."
-msgstr ""
+msgstr "선택한 연락처 유형을 삭제 할 수 없습니다. 연락처 유형이 관련된 다른  커스텀 데이터나 그룹을 갖고 있는지 확인하세요"
 
 #: CRM/Admin/Form/ContactType.php
 msgid "The Contact Type '%1' has been saved."
@@ -47,11 +48,11 @@ msgstr "연락처 유형 '%1'이(가) 저장되었습니다."
 
 #: CRM/Admin/Form/Extensions.php templates/CRM/Admin/Page/Extensions.tpl
 msgid "The system administrator has disabled this feature."
-msgstr ""
+msgstr "시스템 관리자가 이 기능을 비활성화 시켰습니다."
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Unsupported action"
-msgstr ""
+msgstr "지원하지 않는 행동입니다."
 
 #: CRM/Admin/Form/Extensions.php CRM/Admin/Page/Extensions.php
 msgid "Install"
@@ -59,7 +60,7 @@ msgstr "설치"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Install \"%1\"?"
-msgstr ""
+msgstr "\"%1\"을 설치하겠습니까?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install"
@@ -67,23 +68,23 @@ msgstr "다운로드 및 설치"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install \"%1\"?"
-msgstr ""
+msgstr "\"%1\"을 다운로드 및 설치하겠습니까?"
 
 #: CRM/Admin/Form/Extensions.php CRM/Admin/Page/Extensions.php
 msgid "Uninstall"
-msgstr "제거"
+msgstr "삭제"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall \"%1\"?"
-msgstr ""
+msgstr "\"%1\"을 삭제하겠습니까?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Enable \"%1\"?"
-msgstr ""
+msgstr "\"%1\"을 활성화 할까요?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Disable \"%1\"?"
-msgstr ""
+msgstr "\"%1\"을 비활성화 할까요?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Uninstalled"
@@ -97,7 +98,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall Error"
-msgstr ""
+msgstr "삭제 에러"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Installed"
@@ -252,7 +253,7 @@ msgstr "이메일 도메인"
 #: CRM/Admin/Form/MailSettings.php
 msgid ""
 "Email domain must use a valid internet domain format (e.g. 'example.org')."
-msgstr ""
+msgstr "이메일 도메인은 반드시 유효한 인터넷 도메인 포맷을 사용해야 합니다 (예 'example.org')."
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Localpart"
@@ -268,7 +269,7 @@ msgstr ""
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Server"
-msgstr ""
+msgstr "서버"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Bounce Processing"
@@ -305,7 +306,7 @@ msgstr "변경사항이 저장되지 않았음."
 
 #: CRM/Admin/Form/Mapping.php
 msgid "Field Mapping"
-msgstr ""
+msgstr "필드 표시"
 
 #: CRM/Admin/Form/MessageTemplates.php
 #: templates/CRM/Admin/Page/MessageTemplates.hlp
@@ -379,11 +380,11 @@ msgstr ""
 
 #: CRM/Admin/Form/Options.php
 msgid "Regular Expression?"
-msgstr ""
+msgstr "정규표현식?"
 
 #: CRM/Admin/Form/Options.php
 msgid "Class Name"
-msgstr ""
+msgstr "클래스 이름"
 
 #: CRM/Admin/Form/Options.php
 msgid "Contacts AND Cases"
@@ -444,7 +445,7 @@ msgstr "새로운 참가자 상태가 저장되었습니다."
 
 #: CRM/Admin/Form/ParticipantStatusType.php
 msgid "The changes have not been saved."
-msgstr ""
+msgstr "변경사항이 저장되지 않았습니다."
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Admin/Page/PaymentProcessor.php
 msgid "Settings - Payment Processor"
@@ -456,7 +457,7 @@ msgstr "유효한 URL을 입력하십시오"
 
 #: CRM/Admin/Form/PaymentProcessor.php
 msgid "Payment Processor Type"
-msgstr ""
+msgstr "지불 처리자 유형"
 
 #: CRM/Admin/Form/PaymentProcessor.php
 msgid "Is this Payment Processor active?"
@@ -476,7 +477,7 @@ msgstr ""
 
 #: CRM/Admin/Form/PaymentProcessor.php
 msgid "Payment Processor Deleted."
-msgstr ""
+msgstr "지불 처리자가 삭제되었습니다."
 
 #: CRM/Admin/Form/PaymentProcessor.php
 msgid "Payment processor %1 has been saved."
@@ -484,7 +485,7 @@ msgstr "지불 처리자 %1이(가) 저장되었습니다."
 
 #: CRM/Admin/Form/PaymentProcessorType.php
 msgid "Enter a positive integer"
-msgstr ""
+msgstr "정수를 입력해 주세요."
 
 #: CRM/Admin/Form/PaymentProcessorType.php
 msgid "User Name Label"
@@ -504,23 +505,23 @@ msgstr "제목 라벨"
 
 #: CRM/Admin/Form/PaymentProcessorType.php
 msgid "PHP class name"
-msgstr ""
+msgstr "PHP 클래스 이름"
 
 #: CRM/Admin/Form/PaymentProcessorType.php
 msgid "Live Site URL"
-msgstr ""
+msgstr "라이브 사이트 URL"
 
 #: CRM/Admin/Form/PaymentProcessorType.php
 msgid "Live API URL"
-msgstr ""
+msgstr "라이브 API URL"
 
 #: CRM/Admin/Form/PaymentProcessorType.php
 msgid "Live Recurring Payments URL"
-msgstr ""
+msgstr "라이브 자동이체 URL"
 
 #: CRM/Admin/Form/PaymentProcessorType.php
 msgid "Live Button URL"
-msgstr ""
+msgstr "라이브 버튼 URL"
 
 #: CRM/Admin/Form/PaymentProcessorType.php
 msgid "Test Site URL"
@@ -532,7 +533,7 @@ msgstr "테스트 API URL"
 
 #: CRM/Admin/Form/PaymentProcessorType.php
 msgid "Test Recurring Payments URL"
-msgstr ""
+msgstr "자동이체 URL 테스트"
 
 #: CRM/Admin/Form/PaymentProcessorType.php
 msgid "Test Button URL"
@@ -548,7 +549,7 @@ msgstr "이 지불 처리자 유형이 기본입니까?"
 
 #: CRM/Admin/Form/PaymentProcessorType.php
 msgid "Does this Payment Processor Type support recurring donations?"
-msgstr "이 지불 처리자 유형이 반복적인 기부를 지원합니까?"
+msgstr "이 지불 처리자 유형이 자동기부를 지원합니까?"
 
 #: CRM/Admin/Form/PdfFormats.php
 msgid "Is this PDF Page Format the default?"
@@ -617,7 +618,7 @@ msgstr "주소 표준화 기능은 PHP 5 또는 상위 버전이 필요합니다
 
 #: CRM/Admin/Form/Preferences/Address.php
 msgid "You must provide values for all three Address Standarization fields."
-msgstr ""
+msgstr "반드시 모든 3가지 표준 주소화 필드 값을 입력해야 합니다."
 
 #: CRM/Admin/Form/Preferences/Address.php
 msgid ""
