--- a/po/de_DE/mailing.po
+++ b/po/de_DE/mailing.po
@@ -9,6 +9,7 @@
 # Bernhard Heß <dr.bernhard.hess@t-online.de>, 2012-2013
 # Ettore Atalan <atalanttore@googlemail.com>, 2015
 # Fabian <schuttenberg@systopia.de>, 2013-2015
+# Finn F <ffmoto95@gmail.com>, 2016
 # Freddy Koschinsky <schollator@burning.name>, 2013
 # Michal Seidler, 2011, 2012
 # Jo <jo@caj-augsburg.de>, 2012
@@ -27,8 +28,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-02 08:26+0000\n"
+"Last-Translator: Finn F <ffmoto95@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1177,7 +1178,7 @@ msgstr ""
 
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Save As"
-msgstr ""
+msgstr "Speichern unter"
 
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Email address"
@@ -1201,19 +1202,19 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to:"
-msgstr ""
+msgstr "Test-E-Mail senden an:"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Test Email"
-msgstr ""
+msgstr "Test E-Mail"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to %1"
-msgstr ""
+msgstr "Test-Nachricht an %1 senden"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test"
-msgstr ""
+msgstr "Test senden"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to group:"
@@ -1225,7 +1226,7 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.js
 msgid "Send to %1"
-msgstr ""
+msgstr "Senden an %1"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "A test message will be sent to %1 people:"
@@ -1237,7 +1238,7 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.js
 msgid "Group is empty."
-msgstr ""
+msgstr "Gruppe ist leer."
 
 #: ang/crmMailing/BlockRecipients.html
 msgid "Preview a List of Recipients"
@@ -1371,7 +1372,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/wizard.html
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 msgid "Review"
-msgstr ""
+msgstr "Prüfen"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1431,7 +1432,7 @@ msgstr ""
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "Preview (%1)"
-msgstr ""
+msgstr "Vorschau (%1)"
 
 #: ang/crmMailing/EditRecipOptionsDialogCtrl.html
 msgid "Dedupe by email"
@@ -1465,11 +1466,11 @@ msgstr ""
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid "Via Web"
-msgstr ""
+msgstr "via Internet"
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid "Via Email"
-msgstr ""
+msgstr "Via E-Mail"
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid ""
@@ -1541,11 +1542,11 @@ msgstr ""
 
 #: ang/crmMailing/SaveMsgTemplateDialogCtrl.html
 msgid "Update \"%1\""
-msgstr ""
+msgstr "\"%1\" aktualisieren"
 
 #: ang/crmMailing/SaveMsgTemplateDialogCtrl.html
 msgid "Save as:"
-msgstr ""
+msgstr "Speichern unter:"
 
 #: ang/crmMailing/services.js
 msgid "Subject: %1"
@@ -1557,7 +1558,7 @@ msgstr ""
 
 #: ang/crmMailing/services.js
 msgid "Sending..."
-msgstr ""
+msgstr "Senden..."
 
 #: ang/crmMailing/services.js
 msgid "Unsubscribes"
@@ -1573,35 +1574,35 @@ msgstr ""
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Template (A)"
-msgstr ""
+msgstr "Vorlage (A)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Template (B)"
-msgstr ""
+msgstr "Vorlage (B)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "From (A)"
-msgstr ""
+msgstr "Von (A)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "From (B)"
-msgstr ""
+msgstr "Von (B)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Reply-To (A)"
-msgstr ""
+msgstr "Antworten an (A)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Reply-To (B)"
-msgstr ""
+msgstr "Antworten an (B)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Subject (A)"
-msgstr ""
+msgstr "Betreff (A)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Subject (B)"
-msgstr ""
+msgstr "Betreff (B)"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid ""
@@ -1612,7 +1613,7 @@ msgstr ""
 
 #: ang/crmMailingAB/BlockSetup.html ang/crmMailingAB/ListCtrl.html
 msgid "Test Type"
-msgstr ""
+msgstr "Test Typ"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Distribution"
@@ -1620,15 +1621,15 @@ msgstr ""
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Send"
-msgstr ""
+msgstr "Senden"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Send A/B test immediately"
-msgstr ""
+msgstr "Sende sofort A/B Test"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Send A/B test at:"
-msgstr ""
+msgstr "Sende A/B Test an:"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid "Assess"
@@ -1644,35 +1645,35 @@ msgstr ""
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Setup"
-msgstr ""
+msgstr "Einrichtung"
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Target"
-msgstr ""
+msgstr "Ziel"
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Compose"
-msgstr ""
+msgstr "Verfassen"
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Preview (A)"
-msgstr ""
+msgstr "Vorschau (A)"
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Preview (B)"
-msgstr ""
+msgstr "Vorschau (B)"
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Compose (A)"
-msgstr ""
+msgstr "Verfassen (A)"
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Compose (B)"
-msgstr ""
+msgstr "Verfassen (B)"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "A/B Test Results"
-msgstr ""
+msgstr "A/B Test Ergebnisse"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid ""
@@ -1687,15 +1688,15 @@ msgstr ""
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Delivery"
-msgstr ""
+msgstr "Zustellen"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Not selected"
-msgstr ""
+msgstr "Nicht ausgewählt"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Started at"
-msgstr ""
+msgstr "Begonnen bei"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Not started"
@@ -1703,11 +1704,11 @@ msgstr ""
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Completed at"
-msgstr ""
+msgstr "Beendet bei"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Not completed"
-msgstr ""
+msgstr "Nicht beendet"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Search for contacts using '%1'"
@@ -1755,7 +1756,7 @@ msgstr ""
 
 #: ang/crmMailingAB/ListCtrl.html
 msgid "- Test Type -"
-msgstr ""
+msgstr "- Test Typ -"
 
 #: ang/crmMailingAB/ListCtrl.html
 msgid "You have no A/B mailings"
