--- a/po/de_DE/case.po
+++ b/po/de_DE/case.po
@@ -9,6 +9,7 @@
 # Ettore Atalan <atalanttore@googlemail.com>, 2014
 # Fabian <schuttenberg@systopia.de>, 2014,2016
 # Felix Kamella <felix.kamella@lobbycontrol.de>, 2012
+# Finn F <ffmoto95@gmail.com>, 2016
 # Martin Peth <peth@systopia.de>, 2013-2015
 # Martin Peth <peth@systopia.de>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -22,8 +23,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-02 07:58+0000\n"
+"Last-Translator: Finn F <ffmoto95@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -308,7 +309,7 @@ msgstr "%1 gespeichert"
 
 #: CRM/Case/Form/ActivityToCase.php CRM/Case/XMLProcessor/Report.php
 msgid "With Contact(s)"
-msgstr ""
+msgstr "Mit Kontakt(en)"
 
 #: CRM/Case/Form/ActivityView.php
 msgid "Activity Revision History"
@@ -400,11 +401,11 @@ msgstr "Aktivitätsdatum - von"
 
 #: CRM/Case/Form/CaseView.php
 msgid "Deleted Activities"
-msgstr ""
+msgstr "Gelöschte Aktivitäten"
 
 #: CRM/Case/Form/EditClient.php
 msgid "Select Contact"
-msgstr ""
+msgstr "Kontakt auswählen"
 
 #: CRM/Case/Form/EditClient.php
 msgid "Reassign Case"
@@ -621,7 +622,7 @@ msgstr ""
 
 #: ang/crmCaseType/activityTypesTable.html
 msgid "Add activity type"
-msgstr ""
+msgstr "Aktivitätstyp hinzufügen"
 
 #: ang/crmCaseType/caseTypeDetails.html
 msgid "WARNING: The case type name includes deprecated characters."
@@ -641,7 +642,7 @@ msgstr ""
 
 #: ang/crmCaseType/edit.html
 msgid "Learn more..."
-msgstr ""
+msgstr "Erfahren Sie mehr..."
 
 #: ang/crmCaseType/edit.html templates/CRM/Case/Form/CaseView.tpl
 msgid "Roles"
@@ -649,11 +650,11 @@ msgstr "Rollen"
 
 #: ang/crmCaseType/edit.html
 msgid "Add..."
-msgstr ""
+msgstr "Hinzufügen..."
 
 #: ang/crmCaseType/edit.html
 msgid "Timeline"
-msgstr ""
+msgstr "Zeitachse"
 
 #: ang/crmCaseType/edit.html
 msgid "Sequence"
@@ -674,11 +675,11 @@ msgstr ""
 
 #: ang/crmCaseType/rolesTable.html
 msgid "Add role"
-msgstr ""
+msgstr "Rolle hinzufügen"
 
 #: ang/crmCaseType/timelineTable.html
 msgid "Reference"
-msgstr ""
+msgstr "Referenz"
 
 #: ang/crmCaseType.js
 msgid ""
@@ -933,7 +934,7 @@ msgstr "Mitglieder zu %1 hinzufügen"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "- select contacts -"
-msgstr ""
+msgstr "- Kontakte auswählen -"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "The group %1 has no members."
@@ -1188,7 +1189,7 @@ msgstr ""
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Export Document"
-msgstr ""
+msgstr "Dokument exportieren"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Are you sure you want to end this relationship?"
