po: update po/de_DE/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/admin.po
+++ b/po/de_DE/admin.po
@@ -36,7 +36,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-01 18:56+0000\n"
+"PO-Revision-Date: 2016-07-02 07:38+0000\n"
 "Last-Translator: Finn F <ffmoto95@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -284,7 +284,7 @@ msgstr "Die E-Mail-Domäne muss ein korrektes Format haben. (z.B. 'beispiel.at')
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Localpart"
-msgstr ""
+msgstr "Lokaler Teil"
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Return-Path"
@@ -1036,7 +1036,7 @@ msgstr "danach"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Action Condition"
-msgstr ""
+msgstr "Aktionsbedingung"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Repetition Condition"
@@ -1094,11 +1094,11 @@ msgstr ""
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Selected Reminder has been deleted."
-msgstr ""
+msgstr "Gewählte Erinnerung wurde gelöscht."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Your new Reminder titled %1 has been saved."
-msgstr ""
+msgstr "Ihre neue Erinnerung %1 wurde gespeichert."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Your Reminder titled %1 has been updated."
@@ -2252,7 +2252,7 @@ msgstr ""
 
 #: ang/crmCxn/Connectivity.html
 msgid "See also:"
-msgstr ""
+msgstr "Siehe auch:"
 
 #: ang/crmCxn/Connectivity.html
 msgid "Firewalls and Proxies"
@@ -2306,7 +2306,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Reconnect"
-msgstr ""
+msgstr "Verbindung wieder herstellen"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Disconnect"
@@ -2328,7 +2328,7 @@ msgstr "Neue Verbindungen"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Connect"
-msgstr ""
+msgstr "%1: Verbinden"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Connect"
@@ -2356,11 +2356,11 @@ msgstr "Verbunden"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Reconnecting..."
-msgstr ""
+msgstr "Verbindung wird wieder hergestellt..."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Reconnected"
-msgstr ""
+msgstr "Verbindung wurde wieder hergestellt"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Disconnecting..."
