po: update po/nl_NL/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/admin.po
+++ b/po/nl_NL/admin.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-25 14:01+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-07-02 19:06+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -44,7 +44,7 @@ msgstr "Geselecteerd contacttype verwijderd."
 msgid ""
 "Selected contact type can not be deleted. Make sure contact type doesn't "
 "have any associated custom data or group."
-msgstr "Het geselecteerde contacttype kan niet verwijderd worden. Zorg ervoor dat er geen andere gegevens zoals specifieke velden of groepen zijn die gebruik maken van dit contacttype."
+msgstr "Het geselecteerde contacttype kan niet verwijderd worden. Zorg ervoor dat er geen aangepaste velden of groepen meer bestaan die gekoppeld zijn aan dit contacttype."
 
 #: CRM/Admin/Form/ContactType.php
 msgid "The Contact Type '%1' has been saved."
@@ -1322,7 +1322,7 @@ msgstr "De kaartfuncties vereisen PHP versie 5 of hoger."
 #: CRM/Admin/Form/Setting/Miscellaneous.php
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Misc (Undelete, PDFs, Limits, Logging, Captcha, etc.)"
-msgstr "Diversen (Verwijderen herstellen, PDF's, loggen...)"
+msgstr "Diversen (prullenbak, logging, limieten, PDF's, ...)"
 
 #: CRM/Admin/Form/Setting/Miscellaneous.php
 #: templates/CRM/Admin/Form/Setting/Debugging.hlp
@@ -1570,15 +1570,15 @@ msgstr "Bron-URL CiviCRM"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Image Upload URL"
-msgstr "Afbeelding Upload URL"
+msgstr "URL uploadmap voor afbeeldingen"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Custom css URL"
-msgstr "Aangepaste CSS URL"
+msgstr "URL van aangepaste CSS"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Extension Resource URL"
-msgstr "Bron-URL extensies"
+msgstr "URL van extensiemap"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Force Secure URLs (SSL)"
@@ -1596,7 +1596,7 @@ msgstr "U dient een veilige server in te richten voordat u de optie 'Veilige URL
 
 #: CRM/Admin/Form/Tag.php templates/CRM/Admin/Page/Tag.tpl
 msgid "Tag Set"
-msgstr "Kenmerkset"
+msgstr "Set van kenmerken"
 
 #: CRM/Admin/Form/Tag.php
 msgid ""
@@ -1691,7 +1691,7 @@ msgid ""
 "The selected financial account cannot be disabled because at least one "
 "Accounts Receivable type account is required (to ensure that accounting "
 "transactions are in balance)."
-msgstr "De geselecteerde financiële rekening kan niet worden uitgeschakeld omdat er minstens een Ontvangstrekening rekeningtype verplicht is (om er zeker van te zijn dat de transacties in balans zijn)."
+msgstr "De geselecteerde financiële rekening kan niet worden uitgeschakeld tenminste één debiteurenrekening actief moet zijn (om er zeker van te zijn dat de transacties in balans zijn)."
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this financial account?"
@@ -1743,7 +1743,7 @@ msgstr "Weet u zeker dat u dit aangepaste veld wilt uitschakelen?"
 msgid ""
 "Are you sure you want to disable this custom data group? Any profile fields "
 "that are linked to custom fields of this group will be disabled."
-msgstr "Wilt u deze specifieke gegevensgroep uitschakelen? Alle profielvelden die gekoppeld zijn aan velden uit deze groep worden hierdoor uitgeschakeld."
+msgstr "Wilt u deze aangepaste gegevensgroep uitschakelen? Alle velden in profielen die gekoppeld zijn aan velden uit deze groep worden hierdoor uitgeschakeld."
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this message tempate?"
@@ -2197,7 +2197,7 @@ msgstr "De applicatie, \\\"%1\\\", wil toegang tot uw systeem."
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "Are you sure you want to reconnect \\\"%1\\\"?"
-msgstr "Weet u zeker dat u opnieuw wilt met \\\"%1\\\"  verbinden?"
+msgstr "Weet u zeker dat u opnieuw met \\\"%1\\\"  wilt verbinden?"
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid ""
@@ -3016,7 +3016,7 @@ msgstr "Adresweergave"
 msgid ""
 "Format for displaying addresses in the Contact Summary and Event Information"
 " screens."
-msgstr "Opmaak voor de weergave van adressen op de schermen contactoverzicht en Evenementinformatie."
+msgstr "Opmaak voor weergave van adressen op het contactoverzicht en bij informatie over evenementen."
 
 #: templates/CRM/Admin/Form/Preferences/Address.tpl
 msgid "Use %1 for state/province abbreviation or %2 for state province name."
@@ -4515,7 +4515,7 @@ msgstr "ACL's (Access Control Lists: toegangslijsten) stellen u in staat de toeg
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid "Note that a CiviCRM ACL Role is not related to the Drupal Role."
-msgstr "Let op: een CiviCRM ACL Rol staat los van de Drupal Rol."
+msgstr "Let op: de ACL-rollen in CiviCRM staan los van de rollen in Drupal."
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid ""
@@ -4590,7 +4590,7 @@ msgstr "Elke CiviCRM ACL-rol is gekoppeld aan een aantal rechten. Gebruik deze l
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid "2. Assign Users to CiviCRM ACL Roles"
-msgstr "2. CiviCRM ACL-rollen aan Gebruikers toekennen"
+msgstr "2. CiviCRM ACL-rollen toekennen aan gebruikers"
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid ""
@@ -4849,7 +4849,7 @@ msgstr "Aangepaste gegevens, formulieren en schermen"
 msgid ""
 "Configure custom fields to collect and store custom data which is not "
 "included in the standard CiviCRM forms."
-msgstr "Definieer specifieke velden om gegevens vast te leggen waarin in de standaard CiviCRM formulieren niet is voorzien."
+msgstr "Definieer eigen aangepaste velden die nog niet in CiviCRM bestaan, om daarin gegevens vast te leggen die specifiek zijn voor uw organisatie."
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid ""
@@ -4904,7 +4904,7 @@ msgstr "Fondsen verdelen, bijvoorbeeld aan stichtingen, toelage-verstrekkers, en
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Organizing Your Data"
-msgstr "Gegevens Indelen"
+msgstr "Uw gegevens ordenen"
 
 #: templates/CRM/Admin/Page/ContactType.hlp
 msgid ""
@@ -4919,7 +4919,7 @@ msgstr "CiviCRM kent standaard 3 basistypes contacten: persoon, huishouden en or
 
 #: templates/CRM/Admin/Page/ContactType.hlp
 msgid "Contact Type Icon"
-msgstr "Contact Type Icoon"
+msgstr "Icoon contacttype"
 
 #: templates/CRM/Admin/Page/ContactType.hlp
 msgid ""
@@ -5360,7 +5360,7 @@ msgstr "Alle wijzigingen worden direct opgeslagen. U moet wel de pagina opnieuw 
 
 #: templates/CRM/Admin/Page/Navigation.tpl
 msgid "Customize the CiviCRM navigation menu bar for your users here."
-msgstr "Pas hier het CiviCRM navigatiemenu aan voor uw gebruikers."
+msgstr "Pas hier het CiviCRM-navigatiemenu aan voor uw gebruikers."
 
 #: templates/CRM/Admin/Page/Navigation.tpl
 msgid "Add Menu Item"
@@ -5570,7 +5570,7 @@ msgstr "Om het wachtlijstbeheer in te schakelen moeten de volgende statussen ing
 msgid ""
 "Once these statuses are enabled, the event Info and Settings screen will "
 "have controls to enable (and configure) waitlisting."
-msgstr "Zodra deze statussen ingeschakeld zijn, verschijnt op het scherm Evenementinformatie en -instellingen de optie om de wachtlijst in te schakelen (en te configureren)."
+msgstr "Zodra deze statussen ingeschakeld zijn, verschijnt op het scherm Evenementsinformatie en -instellingen de optie om de wachtlijst in te schakelen (en te configureren)."
 
 #: templates/CRM/Admin/Page/ParticipantStatusType.hlp
 msgid "Approval Statuses"
@@ -6388,7 +6388,7 @@ msgstr "Inschakelen van de debugfuncties zoals het tonen van sjabloonvariabelen 
 
 #: templates/CRM/Admin/Page/Setting.tpl
 msgid "Administration Documentation"
-msgstr "Beheer documentatie"
+msgstr "Documentatie voor beheerders"
 
 #: templates/CRM/Admin/Page/Tag.tpl
 msgid "Add Tag"
@@ -6817,7 +6817,7 @@ msgstr "Samenvoegen op:"
 
 #: templates/CRM/Admin/Page/CKEditorConfig.tpl
 msgid "Skin"
-msgstr "Huid"
+msgstr "Thema"
 
 #: templates/CRM/Admin/Page/CKEditorConfig.tpl
 msgid "Plugins"
@@ -6845,7 +6845,7 @@ msgstr "U kunt berichtsjablonen ook gebruiken voor de inhoud van CiviMail (maili
 
 #: templates/CRM/Admin/Page/Navigation.tpl
 msgid "Cleanup reports menu"
-msgstr "Menu rapporten opruimen"
+msgstr "Rapporten-menu opruimen"
 
 #: templates/CRM/Admin/Page/Navigation.tpl
 msgid ""
