--- a/po/nl_NL/contribute.po
+++ b/po/nl_NL/contribute.po
@@ -20,8 +20,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-25 13:57+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-07-02 17:43+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -584,7 +584,7 @@ msgstr "Knoptekst"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Url Homepage"
-msgstr "Startpagina-URL"
+msgstr "URL van startpagina"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Color Title"
@@ -1964,7 +1964,7 @@ msgstr "Dit transactienummer bestaat al in de database. Voer ter controle het re
 
 #: CRM/Contribute/Form/Task/Status.php
 msgid "Update Pending Status"
-msgstr "Status 'In afwachting' bijwerken"
+msgstr "Status 'In behandeling' bijwerken"
 
 #: CRM/Contribute/Form/Task/Status.php
 msgid ""
