po: update po/nl_NL/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/event.po
+++ b/po/nl_NL/event.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-25 13:37+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-07-02 17:36+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -219,7 +219,7 @@ msgstr "Einddatum inschrijving"
 #: CRM/Event/DAO/Event.php templates/CRM/Event/Form/Registration/Confirm.tpl
 #: templates/CRM/Event/Form/Registration/ThankYou.tpl
 msgid "Event Information"
-msgstr "Evenementinformatie"
+msgstr "Evenementsinformatie"
 
 #: CRM/Event/DAO/Event.php
 msgid "Is this a PAID event?"
@@ -339,7 +339,7 @@ msgstr "Naam evenementsjabloon"
 
 #: CRM/Event/DAO/Event.php
 msgid "Created By Contact ID"
-msgstr "Aangemaakt door contact-id"
+msgstr "Aangemaakt door contact-ID"
 
 #: CRM/Event/DAO/Event.php
 msgid "Event Created Date"
@@ -537,7 +537,7 @@ msgstr "Gebruik a.u.b. geen '/' in de naam van het evenement."
 #: CRM/Event/Form/ManageEvent/EventInfo.php
 #: templates/CRM/Event/Form/ManageEvent/Tab.hlp
 msgid "Event Information and Settings"
-msgstr "Evenementinformatie en -instellingen"
+msgstr "Evenementsinformatie en -instellingen"
 
 #: CRM/Event/Form/ManageEvent/Fee.php
 msgid "Enable Pay Later option?"
@@ -2126,7 +2126,7 @@ msgstr "Vink dit selectievakje aan als u korting wilt geven op basis van de insc
 
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
 msgid "another discount set"
-msgstr "een andere kortingset"
+msgstr "een andere kortingsset"
 
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
 msgid "Discounted Fees"
@@ -2205,17 +2205,17 @@ msgid ""
 "can save this screen without selecting a Profile, complete the steps below "
 "and then return to <strong>Manage Events</strong> and select your new "
 "profile."
-msgstr "Als u hiervoor nog geen specifieke velden en een profiel heeft geconfigureerd, kunt dit scherm opslaan zonder een profiel te selecteren, eerst de onderstaande stappen doorlopen en dan terugkeren naar <strong>Evenementen beheren</strong> om uw nieuwe profiel te selecteren."
+msgstr "Als u hiervoor nog geen aangepaste velden en een profiel heeft geconfigureerd, kunt dit scherm opslaan zonder een profiel te selecteren en eerst de onderstaande stappen te doorlopen. Daarna keert u terug naar <strong>Evenementen beheren</strong> om uw nieuwe profiel te selecteren."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
 "Create a custom field group which is 'Used for' "
 "<strong>Participants</strong>."
-msgstr "Maak een specifieke veldengroep met 'Gebruiken voor' ingesteld op <strong>Deelnemers</strong>."
+msgstr "Maak een groep aangepaste velden met 'Gebruiken voor' ingesteld op <strong>Deelnemers</strong>."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Add your field(s) this custom field group."
-msgstr "Voeg uw veld(en) toe aan de specifieke veldengroep."
+msgstr "Voeg uw veld(en) toe aan deze groep aangepaste velden."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Create a profile (e.g. 'Participant Information')."
@@ -2223,7 +2223,7 @@ msgstr "Maak een profiel (bijv.: 'Deelnemersinformatie')."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Add your custom field(s) to this profile as profile fields."
-msgstr "Voeg uw specifieke veld(en) toe aan dit profiel als profielvelden."
+msgstr "Voeg uw aangepaste veld(en) toe aan dit profiel als profielvelden."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
@@ -2744,7 +2744,7 @@ msgstr "Deelnemer %1"
 
 #: templates/CRM/Event/Form/Registration/EventInfoBlock.tpl
 msgid "View complete event information."
-msgstr "Volledige evenementinformatie weergeven"
+msgstr "Volledige evenementsinformatie weergeven"
 
 #: templates/CRM/Event/Form/Registration/EventInfoBlock.tpl
 msgid "Map this Address"
@@ -2853,7 +2853,7 @@ msgstr "E-mailadres(sen) extra deelnemer(s)"
 
 #: templates/CRM/Event/Form/Registration/ThankYou.tpl
 msgid "Back to \"%1\" event information"
-msgstr "Terug naar evenementinformatie van  \"%1\""
+msgstr "Terug naar evenementsinformatie van  \"%1\""
 
 #: templates/CRM/Event/Form/Search/Common.tpl
 msgid "Event Dates"
@@ -3294,7 +3294,7 @@ msgstr "Meer evenementen bladeren"
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "There are no active Events to display."
-msgstr "Er zijn geen actieve evenementen te tonen."
+msgstr "Er zijn geen actieve evenementen om te tonen."
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "You can <a href=\"%1\">Create a New Event</a> now."
@@ -3759,7 +3759,7 @@ msgstr "De registratie voor dit evenement kan niet worden geannuleerd of verplaa
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid "Transfer or Cancel Registration"
-msgstr "Overdraag- of annuleringsregistratie"
+msgstr "Inschrijving overdragen of annuleren"
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid "Transfer"
@@ -3771,7 +3771,7 @@ msgstr "Verzenden"
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid "Please select Transfer OR Cancel action."
-msgstr "Kies de actie: Overdragen of Annuleer"
+msgstr "Kies voor 'Overdragen' of 'Annuleren'."
 
 #: CRM/Event/Form/Task/Batch.php CRM/Event/Form/Task/PickProfile.php
 #: CRM/Event/Task.php
