--- a/po/nl_NL/batch.po
+++ b/po/nl_NL/batch.po
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-20 10:45+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-07-02 15:56+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -260,4 +260,4 @@ msgstr "Toevoegen, verwijderen of wijzigen van de volgorde van de kolommen door 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid ""
 "Custom fields and a Personal Campaign Page field can be added if needed."
-msgstr "Specifieke gegevens en een persoonlijke campagnepagina kunnen later worden toegevoegd."
+msgstr "Aangepaste gegevensvelden en velden voor een persoonlijke campagnepagina kunnen later worden toegevoegd."
