--- a/po/nl_NL/case.po
+++ b/po/nl_NL/case.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-23 18:21+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-07-02 16:50+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -888,7 +888,7 @@ msgstr "Wijzig dossiertype (maakt een activiteit aan)"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Change case status (creates activity record)"
-msgstr "Wijzig status dossier (maakt een activiteit aan)"
+msgstr "Dossierstatus wijzigen (maakt een activiteit aan)"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Open Date"
