po: update po/nl_NL/campaign.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/campaign.po
+++ b/po/nl_NL/campaign.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-23 18:48+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-07-02 17:06+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -95,7 +95,7 @@ msgstr "Einddatum campagne"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign External ID"
-msgstr "Campagne Externe-ID"
+msgstr "Externe ID voor campagne"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Parent Campaign"
@@ -369,7 +369,7 @@ msgstr "Totaal gereserveerde contacten moet een positief getal zijn"
 msgid ""
 "There are no custom data sets for activity type \"%1\". To create one, <a "
 "href=\"%2\" target=\"%3\">click here</a>."
-msgstr "Er is geen specifieke gegevensgroep voor activiteitstype \"%1\". U kunt <a href=\"%2\" target=\"%3>er een aanmaken</a>."
+msgstr "Er is geen aangepaste gegevensgroep voor activiteitstype \"%1\". U kunt <a href=\"%2\" target=\"%3>er een aanmaken</a>."
 
 #: CRM/Campaign/Form/Survey/Questions.php
 msgid "Contact Info"
@@ -496,7 +496,7 @@ msgstr[1] "%count respondenten niet vrijgegeven."
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Could not find Survey Id."
-msgstr "Het enquête-ID is niet gevonden."
+msgstr "De enquête-ID is niet gevonden."
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Could not find contacts for reservation."
