--- a/po/nl_NL/install.po
+++ b/po/nl_NL/install.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-23 18:15+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-07-02 17:04+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -329,7 +329,7 @@ msgstr "MySQL-server ondersteunt InnoDB"
 
 #: install/index.php
 msgid "Could not determine if MySQL has InnoDB support. Assuming no"
-msgstr "Er kan niet worden bepaald of MySQL InnoDB ondersteunt. Aanname: het wordt niet ondersteunt."
+msgstr "Er kan niet worden bepaald of MySQL InnoDB ondersteunt. Aanname: het wordt niet ondersteund."
 
 #: install/index.php
 msgid "Could not login to the database."
