--- a/po/nl_NL/mailing.po
+++ b/po/nl_NL/mailing.po
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-25 13:55+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-07-02 17:15+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -116,7 +116,7 @@ msgstr "Mailing: openen volgen"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Mailing: Trackable URL Clicks"
-msgstr "Mailing: URL klikken volgen"
+msgstr "Mailing: klikken op URL's volgen"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Mailing: Trackable Replies"
@@ -159,7 +159,7 @@ msgstr "Openen volgen"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Trackable URLs"
-msgstr "Traceerbare URL's"
+msgstr "Te volgen URL's"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Trackable Replies"
@@ -244,7 +244,7 @@ msgstr "Berichtinhoud (HTML)"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Url Tracking"
-msgstr "URL volgen"
+msgstr "URL's olgen"
 
 #: CRM/Mailing/DAO/Mailing.php ang/crmMailing/BlockResponses.html
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
@@ -1173,7 +1173,7 @@ msgstr "E-mailadres"
 
 #: ang/crmMailing/BlockMailing.html
 msgid "Unsubscribe Group"
-msgstr "Afmelden groep"
+msgstr "Groep afmelden"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "No content to preview"
@@ -1390,7 +1390,7 @@ msgstr "Concept opslaan"
 
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 msgid "Submit and Approve Mailing"
-msgstr "Opslaan en goedkeuren mailing"
+msgstr "Mailing opslaan en goedkeuren"
 
 #: ang/crmMailing/EditMailingCtrl.js ang/crmMailingAB/EditCtrl.js
 #: ang/crmMailingAB/WinnerDialogCtrl.js
@@ -1511,11 +1511,11 @@ msgstr "Exclusief groep"
 
 #: ang/crmMailing/Recipients.html
 msgid "Include Past Recipients From"
-msgstr "Inclusief vorige ontvangers"
+msgstr "Inclusief eerdere ontvangers"
 
 #: ang/crmMailing/Recipients.html
 msgid "Exclude Past Recipients From"
-msgstr "Exclusief vorige ontvangers"
+msgstr "Exclusief eerdere ontvangers"
 
 #: ang/crmMailing/Recipients.js
 msgid ""
