--- a/po/nl_NL/financial.po
+++ b/po/nl_NL/financial.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-23 18:04+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-07-02 17:19+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -116,11 +116,11 @@ msgstr "Financiële transactie-id"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account ID"
-msgstr "Nummer financieel account"
+msgstr "Financiële rekening-ID"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account Name"
-msgstr "Financieel Account Naam"
+msgstr "Naam financiële rekening"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 #: CRM/Financial/Form/FinancialAccount.php
@@ -135,39 +135,39 @@ msgstr "Code rekeningtype"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account Description"
-msgstr "Financieel Account Beschrijving"
+msgstr "Beschrijving financiële rekening"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account Parent"
-msgstr "Financieel Account Bovenliggend"
+msgstr "Bovenliggende financiële rekening"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Header Financial Account?"
-msgstr "Kop Financieel Account?"
+msgstr "Kop voor financiële rekening"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Deductible Financial Account?"
-msgstr "Aftrekbaar Financieel Account?"
+msgstr "Kosten geboekt op deze rekening aftrekbaar?"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Tax Financial Account?"
-msgstr "Belasting Financieel Account?"
+msgstr "Kosten geboekt op deze rekening belast?"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account Tax Rate"
-msgstr "Financieel Account Belastingtarief"
+msgstr "Belastingtarief financiële rekening"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Reserved Financial Account?"
-msgstr "Gereserveerd Financieel Account?"
+msgstr "Gereserveerde financiële rekening?"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Financial Account is Active"
-msgstr "Financieel Account is actief"
+msgstr "Financiële rekening is actief"
 
 #: CRM/Financial/DAO/FinancialAccount.php
 msgid "Default Financial Account"
-msgstr "Standaard financieel account"
+msgstr "Standaard financiële rekeing"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction ID"
@@ -416,7 +416,7 @@ msgid ""
 "The selected financial account cannot be deleted because at least one "
 "Accounts Receivable type account is required (to ensure that accounting "
 "transactions are in balance)."
-msgstr "De geselecteerde financiële rekening kan niet worden verwijderd omdat er minstens een Ontvangstrekening rekeningtype verplicht is (om er zeker van te zijn dat de transacties in balans zijn)."
+msgstr "De geselecteerde financiële rekening kan niet worden verwijderd, omdat er tenminste één debiteurenrekening actief moet zijn (om er zeker van te zijn dat transacties in balans zijn)."
 
 #: CRM/Financial/Form/FinancialAccount.php
 #: CRM/Financial/Form/FinancialType.php
@@ -439,7 +439,7 @@ msgstr "Is belasting?"
 
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Taxable accounts should have Financial Account Type set to Liability."
-msgstr "Een belastbaar account moet het financieel account type Bijtelling hebben."
+msgstr "Een belastbaar account moet als rekeningtype Crediteuren hebben."
 
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Please enter value for tax rate"
@@ -528,7 +528,7 @@ msgstr "Uw financieel type \"%1\" is aangemaakt, tezamen met een bijbehorend acc
 #: CRM/Financial/Form/FinancialTypeAccount.php
 #: templates/CRM/Financial/Page/FinancialType.tpl
 msgid "Financial Accounts"
-msgstr "Financiële Rekeningen"
+msgstr "Financiële rekeningen"
 
 #: CRM/Financial/Form/FinancialTypeAccount.php
 msgid ""
@@ -632,7 +632,7 @@ msgstr "Verwijderen financieel rekeningtype"
 
 #: CRM/Financial/Page/FinancialTypeAccount.php
 msgid "Assigned Financial Accounts"
-msgstr "Toekennen financiële rekeningen"
+msgstr "Toegewezen financiële rekeningen"
 
 #: CRM/Financial/Page/FinancialTypeAccount.php
 msgid "Financial Account Types"
