--- a/po/nl_NL/member.po
+++ b/po/nl_NL/member.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-23 19:08+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-07-02 17:34+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -952,7 +952,7 @@ msgstr "Dubbele naam koppeltabel voor het importeren van lidmaatschappen"
 
 #: CRM/Member/Import/Parser.php
 msgid "View Membership URL"
-msgstr "Lidmaatschap-URL weergeven"
+msgstr "Lidmaatschaps-URL weergeven"
 
 #: CRM/Member/Info.php
 msgid "access CiviMember"
@@ -2296,15 +2296,15 @@ msgstr "Dit lidmaatschap wordt automatisch verlengd. U kunt het automatisch verl
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status Is Overriden"
-msgstr "Lidmaatschapsstatus is genegeerd"
+msgstr "Status lidmaatschap handmatig ingesteld"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status Is NOT Overriden"
-msgstr "Lidmaatschapsstatus is niet genegeerd"
+msgstr "Status lidmaatschap automatisch ingesteld"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status Is Overriden?"
-msgstr "Lidmaatschapsstatus negeren?"
+msgstr "Handmatige lidmaatschapsstatus?"
 
 #: CRM/Member/DAO/Membership.php
 msgid "Membership Recurring Contribution"
@@ -2362,7 +2362,7 @@ msgstr "Bijdrage voor verlenging gedaan door een staflid met gebruik van een cre
 #: CRM/Member/Form/Task/Batch.php CRM/Member/Form/Task/PickProfile.php
 #: CRM/Member/Task.php
 msgid "Update multiple memberships"
-msgstr "Wijzig meerdere lidmaatschappen"
+msgstr "Meerdere lidmaatschappen wijzigen"
 
 #: CRM/Member/Form/Task/Batch.php
 msgid ""
@@ -2401,7 +2401,7 @@ msgstr "Bij het automatisch verlengen van lidmaatschap wordt de e-mail verzonden
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid "Membership Status Is Override?"
-msgstr "Lidmaatschapsstatus negeren?"
+msgstr "Handmatige lidmaatschapsstatus?"
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
