--- a/po/nl_NL/common-components.po
+++ b/po/nl_NL/common-components.po
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-25 13:38+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-07-02 16:34+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -32,7 +32,7 @@ msgstr "OK"
 #: CRM/Admin/Form/ContactType.php templates/CRM/Admin/Form/Setting/Url.hlp
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Image URL"
-msgstr "Afbeeldings-URL"
+msgstr "URL voor afbeelding"
 
 #: CRM/Admin/Form/LabelFormats.php CRM/Badge/Form/Layout.php
 msgid "Font Name"
@@ -100,11 +100,11 @@ msgstr "Website-URL"
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Financial/DAO/PaymentProcessor.php
 msgid "Recurring Payments URL"
-msgstr "Periodieke Betalingen URL"
+msgstr "URL periodieke betalingen"
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Financial/DAO/PaymentProcessor.php
 msgid "Button URL"
-msgstr "Knop URL"
+msgstr "URL voor knop"
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Financial/DAO/PaymentProcessor.php
 msgid "API URL"
@@ -1304,7 +1304,7 @@ msgstr "Raadpleeg de online documentatie voor meer details over het maken %1 en 
 #: templates/CRM/Contribute/Form/ContributionPage/Custom.hlp
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "custom fields"
-msgstr "eigen velden"
+msgstr "aangepaste velden"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Custom.hlp
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
