--- a/po/nl_NL/pledge.po
+++ b/po/nl_NL/pledge.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-01 14:08+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-07-02 16:51+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -606,7 +606,7 @@ msgstr "Betaald bedrag"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
 msgid "Credit Card Payment"
-msgstr "Creditcard Betaling"
+msgstr "Creditcardbetaling"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
 msgid "Edit Scheduled Payment"
