--- a/po/ko_KR/provinces.po
+++ b/po/ko_KR/provinces.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Young Jun Kim <young.j.kim0214@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-04 05:31+0000\n"
+"Last-Translator: Young Jun Kim <young.j.kim0214@gmail.com>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/civicrm/civicrm/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1878,7 +1879,7 @@ msgstr "Burgas"
 
 msgctxt "province"
 msgid "Dobrich"
-msgstr ""
+msgstr "Dobrich"
 
 msgctxt "province"
 msgid "Gabrovo"
@@ -1890,19 +1891,19 @@ msgstr "Haskovo"
 
 msgctxt "province"
 msgid "Yambol"
-msgstr ""
+msgstr "Yambol "
 
 msgctxt "province"
 msgid "Kardzhali"
-msgstr ""
+msgstr "Kardzhali "
 
 msgctxt "province"
 msgid "Kyustendil"
-msgstr ""
+msgstr "Kyustendil "
 
 msgctxt "province"
 msgid "Lovech"
-msgstr ""
+msgstr "Lovech "
 
 msgctxt "province"
 msgid "Pazardzik"
@@ -1938,7 +1939,7 @@ msgstr "Sliven"
 
 msgctxt "province"
 msgid "Smolyan"
-msgstr ""
+msgstr "Smolyan "
 
 msgctxt "province"
 msgid "Sofia"
@@ -1950,11 +1951,11 @@ msgstr "Stara Zagora"
 
 msgctxt "province"
 msgid "Shumen"
-msgstr ""
+msgstr "Shumen "
 
 msgctxt "province"
 msgid "Targovishte"
-msgstr ""
+msgstr "Targovishte "
 
 msgctxt "province"
 msgid "Varna"
@@ -1970,7 +1971,7 @@ msgstr "Vidin"
 
 msgctxt "province"
 msgid "Vratsa"
-msgstr ""
+msgstr "Vratsa "
 
 msgctxt "province"
 msgid "Al Hadd"
@@ -6030,7 +6031,7 @@ msgstr "Bali"
 
 msgctxt "province"
 msgid "Kepulauan Bangka Belitung"
-msgstr ""
+msgstr "Kepulauan Bangka Belitung "
 
 msgctxt "province"
 msgid "Banten"
@@ -6046,7 +6047,7 @@ msgstr "Gorontalo"
 
 msgctxt "province"
 msgid "Papua Barat"
-msgstr ""
+msgstr "Papua Barat "
 
 msgctxt "province"
 msgid "Jambi"
@@ -6138,7 +6139,7 @@ msgstr "Sumatera Utara"
 
 msgctxt "province"
 msgid "DKI Jakarta"
-msgstr ""
+msgstr "DKI Jakarta "
 
 msgctxt "province"
 msgid "Aceh"
@@ -6146,7 +6147,7 @@ msgstr "Aceh"
 
 msgctxt "province"
 msgid "DI Yogyakarta"
-msgstr ""
+msgstr "DI Yogyakarta "
 
 msgctxt "province"
 msgid "Cork"
@@ -7906,19 +7907,19 @@ msgstr "Jelgava"
 
 msgctxt "province"
 msgid "Jūrmala"
-msgstr ""
+msgstr "Jūrmala "
 
 msgctxt "province"
 msgid "Liepāja"
-msgstr ""
+msgstr "Liepāja"
 
 msgctxt "province"
 msgid "Rēzekne"
-msgstr ""
+msgstr "Rēzekne"
 
 msgctxt "province"
 msgid "Rīga"
-msgstr ""
+msgstr "Rīga"
 
 msgctxt "province"
 msgid "Ventspils"
@@ -11206,7 +11207,7 @@ msgstr "Tristan da Cunha"
 
 msgctxt "province"
 msgid "Ajdovščina"
-msgstr ""
+msgstr "Ajdovščina"
 
 msgctxt "province"
 msgid "Beltinci"
@@ -11242,7 +11243,7 @@ msgstr "Bovec"
 
 msgctxt "province"
 msgid "Braslovče"
-msgstr ""
+msgstr "Braslovče"
 
 msgctxt "province"
 msgid "Brda"
@@ -11254,7 +11255,7 @@ msgstr "Brezovica"
 
 msgctxt "province"
 msgid "Brežice"
-msgstr ""
+msgstr "Brežice"
 
 msgctxt "province"
 msgid "Cankova"
@@ -11282,15 +11283,15 @@ msgstr "Cerkvenjak"
 
 msgctxt "province"
 msgid "Črenšovci"
-msgstr ""
+msgstr "Črenšovci"
 
 msgctxt "province"
 msgid "Črna na Koroškem"
-msgstr ""
+msgstr "Črna na Koroškem "
 
 msgctxt "province"
 msgid "Črnomelj"
-msgstr ""
+msgstr "Črnomelj"
 
 msgctxt "province"
 msgid "Destrnik"
@@ -11298,7 +11299,7 @@ msgstr "Destrnik"
 
 msgctxt "province"
 msgid "Divača"
-msgstr ""
+msgstr "Divača"
 
 msgctxt "province"
 msgid "Dobje"
@@ -11330,7 +11331,7 @@ msgstr "Dolenjske Toplice"
 
 msgctxt "province"
 msgid "Domžale"
-msgstr ""
+msgstr "Domžale"
 
 msgctxt "province"
 msgid "Dornava"
@@ -11350,7 +11351,7 @@ msgstr "Gorenja vas-Poljane"
 
 msgctxt "province"
 msgid "Gorišnica"
-msgstr ""
+msgstr "Gorišnica"
 
 msgctxt "province"
 msgid "Gornja Radgona"
@@ -11378,15 +11379,15 @@ msgstr "Hajdina"
 
 msgctxt "province"
 msgid "Hoče-Slivnica"
-msgstr ""
+msgstr "Hoče-Slivnica"
 
 msgctxt "province"
 msgid "Hodoš"
-msgstr ""
+msgstr "Hodoš"
 
 msgctxt "province"
 msgid "Horjul"
-msgstr ""
+msgstr "Horjul"
 
 msgctxt "province"
 msgid "Hrastnik"
@@ -11406,11 +11407,11 @@ msgstr "Ig"
 
 msgctxt "province"
 msgid "Ilirska Bistrica"
-msgstr ""
+msgstr "Ilirska Bistrica"
 
 msgctxt "province"
 msgid "Ivančna Gorica"
-msgstr ""
+msgstr "Ivančna Gorica"
 
 msgctxt "province"
 msgid "Izola"
@@ -11426,7 +11427,7 @@ msgstr "Jezersko"
 
 msgctxt "province"
 msgid "Juršinci"
-msgstr ""
+msgstr "Juršinci"
 
 msgctxt "province"
 msgid "Kamnik"
@@ -11438,7 +11439,7 @@ msgstr "Kanal"
 
 msgctxt "province"
 msgid "Kidričevo"
-msgstr ""
+msgstr "Kidričevo"
 
 msgctxt "province"
 msgid "Kobarid"
@@ -11450,7 +11451,7 @@ msgstr "Kobilje"
 
 msgctxt "province"
 msgid "Kočevje"
-msgstr ""
+msgstr "Kočevje"
 
 msgctxt "province"
 msgid "Komen"
@@ -11482,11 +11483,11 @@ msgstr "Kranjska Gora"
 
 msgctxt "province"
 msgid "Križevci"
-msgstr ""
+msgstr "Križevci"
 
 msgctxt "province"
 msgid "Krško"
-msgstr ""
+msgstr "Krško"
 
 msgctxt "province"
 msgid "Kungota"
@@ -11498,7 +11499,7 @@ msgstr "Kuzma"
 
 msgctxt "province"
 msgid "Laško"
-msgstr ""
+msgstr "Laško"
 
 msgctxt "province"
 msgid "Lenart"
@@ -11530,11 +11531,11 @@ msgstr "Logatec"
 
 msgctxt "province"
 msgid "Loška dolina"
-msgstr ""
+msgstr "Loška dolina"
 
 msgctxt "province"
 msgid "Loški Potok"
-msgstr ""
+msgstr "Loški Potok"
 
 msgctxt "province"
 msgid "Lovrenc na Pohorju"
@@ -11542,7 +11543,7 @@ msgstr "Lovrenc na Pohorju"
 
 msgctxt "province"
 msgid "Luče"
-msgstr ""
+msgstr "Luče"
 
 msgctxt "province"
 msgid "Lukovica"
@@ -11550,7 +11551,7 @@ msgstr "Lukovica"
 
 msgctxt "province"
 msgid "Majšperk"
-msgstr ""
+msgstr "Majšperk"
 
 msgctxt "province"
 msgid "Maribor"
@@ -11566,7 +11567,7 @@ msgstr "Medvode"
 
 msgctxt "province"
 msgid "Mengeš"
-msgstr ""
+msgstr "Mengeš"
 
 msgctxt "province"
 msgid "Metlika"
@@ -11574,11 +11575,11 @@ msgstr "Metlika"
 
 msgctxt "province"
 msgid "Mežica"
-msgstr ""
+msgstr "Mežica"
 
 msgctxt "province"
 msgid "Miklavž na Dravskem polju"
-msgstr ""
+msgstr "Miklavž na Dravskem polju"
 
 msgctxt "province"
 msgid "Miren-Kostanjevica"
@@ -11586,7 +11587,7 @@ msgstr "Miren-Kostanjevica"
 
 msgctxt "province"
 msgid "Mirna Peč"
-msgstr ""
+msgstr "Mirna Peč"
 
 msgctxt "province"
 msgid "Mislinja"
@@ -11594,7 +11595,7 @@ msgstr "Mislinja"
 
 msgctxt "province"
 msgid "Moravče"
-msgstr ""
+msgstr "Moravče"
 
 msgctxt "province"
 msgid "Moravske Toplice"
@@ -11626,7 +11627,7 @@ msgstr "Nova Gorica"
 
 msgctxt "province"
 msgid "Novo mesto"
-msgstr ""
+msgstr "Novo mesto"
 
 msgctxt "province"
 msgid "Sveta Ana"
@@ -11634,7 +11635,7 @@ msgstr "Sveta Ana"
 
 msgctxt "province"
 msgid "Sveti Andraž v Slovenskih goricah"
-msgstr ""
+msgstr "Sveti Andraž v Slovenskih goricah"
 
 msgctxt "province"
 msgid "Sveti Jurij"
@@ -11642,31 +11643,31 @@ msgstr "Sveti Jurij"
 
 msgctxt "province"
 msgid "Šalovci"
-msgstr ""
+msgstr "Šalovci"
 
 msgctxt "province"
 msgid "Šempeter-Vrtojba"
-msgstr ""
+msgstr "Šempeter-Vrtojba"
 
 msgctxt "province"
 msgid "Šenčur"
-msgstr ""
+msgstr "Šenčur"
 
 msgctxt "province"
 msgid "Šentilj"
-msgstr ""
+msgstr "Šentilj"
 
 msgctxt "province"
 msgid "Šentjernej"
-msgstr ""
+msgstr "Šentjernej"
 
 msgctxt "province"
 msgid "Šentjur"
-msgstr ""
+msgstr "Šentjur"
 
 msgctxt "province"
 msgid "Škocjan"
-msgstr ""
+msgstr "Škocjan"
 
 msgctxt "province"
 msgid "Škofja Loka"
