--- a/po/ro_RO/common-components.po
+++ b/po/ro_RO/common-components.po
@@ -3,13 +3,14 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# adna23 <adina_sis@yahoo.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-03 07:30+0000\n"
+"Last-Translator: adna23 <adina_sis@yahoo.com>\n"
 "Language-Team: Romanian (http://www.transifex.com/civicrm/civicrm/language/ro/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -29,15 +30,15 @@ msgstr ""
 
 #: CRM/Admin/Form/LabelFormats.php CRM/Badge/Form/Layout.php
 msgid "Font Name"
-msgstr ""
+msgstr "Font Nume"
 
 #: CRM/Admin/Form/LabelFormats.php CRM/Badge/Form/Layout.php
 msgid "Font Size"
-msgstr ""
+msgstr "Font dimensiune"
 
 #: CRM/Admin/Form/LabelFormats.php CRM/Badge/Form/Layout.php
 msgid "Font Style"
-msgstr ""
+msgstr "Font stil"
 
 #: CRM/Admin/Form/LocationType.php templates/CRM/Admin/Page/LabelFormats.tpl
 #: templates/CRM/Admin/Page/LocationType.tpl
@@ -60,12 +61,12 @@ msgstr ""
 
 #: CRM/Admin/Form/Navigation.php templates/CRM/Event/Page/DashBoard.tpl
 msgid "Parent"
-msgstr ""
+msgstr "Parinte"
 
 #: CRM/Admin/Form/Options.php CRM/Financial/Form/BatchTransaction.php
 #: CRM/Report/Form/Mailing/Opened.php CRM/Report/Form/Mailing/Summary.php
 msgid "Opened"
-msgstr ""
+msgstr "Deschis"
 
 #: CRM/Admin/Form/Options.php CRM/Admin/Form/PaymentProcessor.php
 #: templates/CRM/Admin/Page/PaymentProcessor.tpl
@@ -73,7 +74,7 @@ msgstr ""
 #: CRM/Financial/Form/FinancialTypeAccount.php
 #: templates/CRM/Financial/Page/FinancialTypeAccount.tpl
 msgid "Financial Account"
-msgstr ""
+msgstr "Cont financiar"
 
 #: CRM/Admin/Form/Options.php CRM/Report/Form/Register.php
 msgid "Selected %1 type has not been deleted."
@@ -89,7 +90,7 @@ msgstr ""
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Financial/DAO/PaymentProcessor.php
 msgid "Site URL"
-msgstr ""
+msgstr "URL site"
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Financial/DAO/PaymentProcessor.php
 msgid "Recurring Payments URL"
@@ -97,7 +98,7 @@ msgstr ""
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Financial/DAO/PaymentProcessor.php
 msgid "Button URL"
-msgstr ""
+msgstr "Buton URL"
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Financial/DAO/PaymentProcessor.php
 msgid "API URL"
@@ -222,7 +223,7 @@ msgstr ""
 #: xml/templates/message_templates/membership_online_receipt_html.tpl
 #: xml/templates/message_templates/membership_online_receipt_text.tpl
 msgid "Option"
-msgstr ""
+msgstr "Optiune"
 
 #: CRM/Admin/Page/Options.php CRM/Campaign/Page/SurveyType.php
 msgid "%1 Options"
@@ -331,7 +332,7 @@ msgstr ""
 msgid ""
 "The existing option choices for %1 group are listed below. You can add, edit"
 " or delete them from this screen."
-msgstr ""
+msgstr "Optiunile existente pentru grupul %1 sunt afisate mai jos. Puteti adauga,edita sau sterge aceste optiuni de pe ecran."
 
 #: templates/CRM/Admin/Page/Options.tpl
 #: templates/CRM/Campaign/Page/SurveyType.tpl
@@ -523,7 +524,7 @@ msgstr ""
 #: xml/templates/message_templates/membership_offline_receipt_html.tpl
 #: xml/templates/message_templates/membership_offline_receipt_text.tpl
 msgid "Thank you for your support."
-msgstr ""
+msgstr "Va multumim pentru sprijin."
 
 #: templates/CRM/Campaign/Form/Search/EmptyResults.tpl
 #: templates/CRM/Contribute/Form/Search/EmptyResults.tpl
@@ -535,24 +536,24 @@ msgstr ""
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "%1"
-msgstr ""
+msgstr "%1"
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 #: templates/CRM/Report/Form/Tabs/OrderBy.tpl
 msgid "Column"
-msgstr ""
+msgstr "Coloana"
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 #: templates/CRM/Report/Form/Tabs/OrderBy.tpl
 msgid "another column"
-msgstr ""
+msgstr "alta coloana"
 
 #: CRM/Case/BAO/Case.php CRM/Case/Form/Activity/OpenCase.php
 #: CRM/Case/Selector/Search.php templates/CRM/Case/Audit/Report.tpl
 #: templates/CRM/Case/Form/Activity.tpl templates/CRM/Case/Form/Case.tpl
 #: templates/CRM/Case/Form/Task/Print.tpl CRM/Report/Form/Case/Summary.php
 msgid "Client"
-msgstr ""
+msgstr "Client"
 
 #: CRM/Case/DAO/Case.php CRM/Case/Page/AJAX.php
 #: CRM/Report/Form/Case/Summary.php CRM/Report/Form/Extended.php
