--- a/po/ro_RO/countries.po
+++ b/po/ro_RO/countries.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# adna23 <adina_sis@yahoo.com>, 2016
 # pitzy2014 <adp2005rocks@gmail.com>, 2014
 # Dragos Apostol <dragos18dragon@gmail.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -11,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-08 17:05-0400\n"
-"PO-Revision-Date: 2016-05-24 17:49+0000\n"
-"Last-Translator: Dragos Apostol <dragos18dragon@gmail.com>\n"
+"PO-Revision-Date: 2016-07-03 07:24+0000\n"
+"Last-Translator: adna23 <adina_sis@yahoo.com>\n"
 "Language-Team: Romanian (http://www.transifex.com/civicrm/civicrm/language/ro/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -530,7 +531,7 @@ msgstr "Liberia"
 
 msgctxt "country"
 msgid "Libya"
-msgstr ""
+msgstr "Libia"
 
 msgctxt "country"
 msgid "Liechtenstein"
@@ -618,7 +619,7 @@ msgstr "Mongolia"
 
 msgctxt "country"
 msgid "Montserrat"
-msgstr ""
+msgstr "Montserrat"
 
 msgctxt "country"
 msgid "Morocco"
